--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "start": "node .output/server/index.mjs"
+  },
+  "engines": {
+    "node": "16.x"
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
