se agrega modulo para pwa

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "node": "16.x"
   },
   "devDependencies": {
+    "@kevinmarrec/nuxt-pwa": "^0.17.0",
     "@nuxt/devtools": "latest",
     "@nuxtjs/color-mode": "^3.3.0",
     "@nuxtjs/markdownit": "^2.0.0",
