--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "markdown-it-attrs": "^4.1.6",
     "markdown-it-div": "^1.1.0",
     "nuxt": "^3.5.2"
+  },
+  "dependencies": {
+    "@nuxt/content": "^2.8.5"
   }
 }
