--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "nuxt": "^3.5.2"
   },
   "dependencies": {
-    "@nuxt/content": "^2.8.5"
+    "@nuxt/content": "^2.8.5",
+    "@vercel/analytics": "^1.1.1"
   }
 }
