--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@kevinmarrec/nuxt-pwa": "^0.17.0",
     "@nuxt/devtools": "latest",
+    "@nuxthq/studio": "^1.0.2",
     "@nuxtjs/color-mode": "^3.3.0",
     "@nuxtjs/markdownit": "^2.0.0",
     "@nuxtjs/tailwindcss": "^6.8.0",
