--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
     "@nuxtjs/markdownit": "^2.0.0",
     "@nuxtjs/tailwindcss": "^6.8.0",
     "@tailwindcss/typography": "^0.5.9",
+    "@types/lunr": "^2.3.7",
     "@types/node": "^18",
+    "lunr": "^2.3.9",
+    "lunr-languages": "^1.14.0",
     "nuxt": "^3.5.2"
   },
   "dependencies": {
     "@nuxt/content": "^2.8.5",
-    "@vercel/analytics": "^1.1.1",
-    "@nuxtjs/web-vitals": "latest"
+    "@nuxtjs/web-vitals": "latest",
+    "@vercel/analytics": "^1.1.1"
   }
 }
